--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ pyrogram==1.4.16
 py-tgcalls==0.8.1
 asyncio
 youtube-search-python
-yt-dlp
+git+https://github.com/ytdl-patched/yt-dlp
 python-dotenv
